--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/ssr": "^17.2.3",
     "@ngx-translate/core": "^15.0.0",
     "express": "^4.18.2",
+    "ng-process-env": "^16.0.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
